--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script type="text/javascript">
-      window.location = "./docs/source/_build/html/index.html";
-    </script>
   </head>
   <body>
-    <a href="docs\source\_build\html\index.html">123</a>
+    <a href="docs\source\_build\html\index.html">document로 이동하기 (클릭)</a>
   </body>
 </html>
