--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="docs\source\_build\html\index.html">document로 이동하기 (클릭)</a>
+    <a href="./docs/source/_build/html/index.html"
+      >document로 이동하기 (클릭)</a
+    >
   </body>
 </html>
