--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="./docs/source/_build/html/index.html"
-      >document로 이동하기 (클릭)</a
-    >
+    <script type="text/javascript">
+      window.location = "./docs/source/_build/html/index.html";
+    </script>
   </body>
 </html>
